Adding unit tests for coverage and fixing Sonar
LMCROSSITXSADEPLOY-3563