@@ -2,7 +2,6 @@ package org.cloudfoundry.multiapps.controller.client.facade.rest.resources;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.cloudfoundry.multiapps.controller.client.facade.domain.ImmutableInstanceInfo;
 import org.cloudfoundry.multiapps.controller.client.facade.domain.ImmutableInstancesInfo;
@@ -28,7 +27,7 @@ public final class V3InstancesInfoMapper {
 
         return stats.stream()
                     .map(V3InstancesInfoMapper::parseProcessStatistic)
-                    .collect(Collectors.toList());
+                    .toList();
     }
 
     private static InstanceInfo parseProcessStatistic(V3Process.V3ProcessStatsResource statsResource) {
